--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     body {
       font-family: sans-serif;
       margin: 10px;
-      font-size: 14px;
+      font-size: 16px;
+      line-height: 1.6;
       transition: background 0.3s, color 0.3s;
     }
     h2 {
@@ -18,14 +19,14 @@
     table {
       border-collapse: collapse;
       width: 100%;
-      table-layout: fixed;
+      table-layout: auto;
       word-wrap: break-word;
     }
     th, td {
       border: 1px solid #ccc;
-      padding: 6px;
+      padding: 8px;
       text-align: left;
-      font-size: 0.9em;
+      font-size: 15px;
       white-space: normal;
     }
     th {
@@ -36,11 +37,11 @@
       font-size: 1em;
     }
     input[type="number"] {
-      width: 60px;
+      width: 70px;
       font-size: 1em;
     }
     img {
-      width: 50px;
+      width: 60px;
       border-radius: 4px;
     }
     .controls {
