--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       font-size: 15px;
       transition: background 0.3s, color 0.3s;
     }
-    h2 { text-align: center; margin-bottom: 10px; }
+    h2 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
     table {
       border-collapse: collapse;
       width: 100%;
@@ -25,9 +28,15 @@
       white-space: normal;
       text-align: left;
     }
-    th { background-color: #fff; }
-    td:nth-child(6) { min-width: 140px; }
-    td.rarity { font-size: 13px; color: #555; }
+    th {
+      background-color: #fff;
+    }
+    td.rarity, th.rarity {
+      font-size: 13px;
+      width: 40px;
+      text-align: center;
+    }
+    td:nth-child(7) { min-width: 140px; } /* 収録列を広めに */
     .controls {
       display: flex;
       flex-direction: column;
@@ -42,7 +51,11 @@
       border-radius: 4px;
     }
     input[type="number"] { width: 60px; }
-    img { width: 60px; border-radius: 4px; }
+    img {
+      width: 60px;
+      border-radius: 4px;
+      cursor: zoom-in;
+    }
     tr[data-rarity="OSR"] { background-color: #ffe5f0; }
     tr[data-rarity="RR"]  { background-color: #e6f5ff; }
     tr[data-rarity="R"]   { background-color: #f9fff0; }
@@ -83,7 +96,7 @@
   <table id="cardTable">
     <thead>
       <tr>
-        <th>画像</th><th>名前＋枚数</th><th>レア</th><th>Bloom</th><th>HP</th><th>収録</th>
+        <th>画像</th><th>番号</th><th>名前</th><th class="rarity">レア</th><th>Bloom</th><th>HP</th><th>収録</th><th>枚数</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -95,7 +108,6 @@
     <button onclick="importCSV()">📥 CSVインポート</button>
     <button onclick="exportCSV()">📤 所持CSVをコピー</button>
   </div>
-
   <script>
     let cards = [];
 
@@ -147,12 +159,14 @@
         const row = document.createElement("tr");
         row.setAttribute("data-rarity", card.rarity);
         row.innerHTML = `
-          <td><a href="${card.url}" target="_blank"><img src="${card.image}" alt="${card.name}"></a></td>
-          <td>${card.name}<br><input type="number" min="0" value="${count}" onchange="updateOwned('${card.id}', this.value)"></td>
+          <td><img src="${card.image}" alt="${card.name}" onclick="showImageModal('${card.image}')"></td>
+          <td>${card.id}</td>
+          <td>${card.name}</td>
           <td class="rarity">${card.rarity}</td>
           <td>${card.bloom}</td>
           <td>${card.hp}</td>
           <td>${card.product}</td>
+          <td><input type="number" min="0" value="${count}" onchange="updateOwned('${card.id}', this.value)"></td>
         `;
         tbody.appendChild(row);
       });
@@ -202,12 +216,22 @@
         .catch(() => alert("コピーに失敗しました"));
     }
 
+    function showImageModal(src) {
+      const modal = document.getElementById("imageModal");
+      modal.querySelector("img").src = src;
+      modal.style.display = "block";
+    }
+
+    function hideImageModal() {
+      document.getElementById("imageModal").style.display = "none";
+    }
+
     window.onload = () => {
       if (localStorage.getItem("darkMode") === "true") {
         document.body.classList.add("dark");
       }
 
-      fetch("json_file/card_data.json") // ← Tsubasaの環境に合わせてパス変更
+      fetch("json_file/card_data.json")
         .then(response => response.json())
         .then(rawData => {
           cards = Object.entries(rawData).map(([key, card]) => ({
@@ -227,5 +251,17 @@
         .catch(() => alert("JSONファイルの読み込みに失敗しました"));
     };
   </script>
+  <div id="imageModal" onclick="hideImageModal()" style="
+  display:none;
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:rgba(0,0,0,0.8);
+  text-align:center;
+  z-index:1000;
+  cursor:zoom-out;
+">
+  <img src="" style="margin-top:50px; max-width:90%; max-height:90%;">
+</div>
 </body>
 </html>
