--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
       border-radius: 4px;
       cursor: zoom-in;
     }
-    tr[data-rarity="OSR"] { background-color: #ffe5f0; }
-    tr[data-rarity="RR"]  { background-color: #e6f5ff; }
-    tr[data-rarity="R"]   { background-color: #f9fff0; }
-    tr[data-rarity="U"]   { background-color: #f3f3f3; }
-    tr[data-rarity="C"]   { background-color: #fff; }
+    tr[data-rarity="C"]   { background-color: #ffffff; }   /* Common */
+    tr[data-rarity="OC"]  { background-color: #f4f4f4; }   /* Original Common */
+    tr[data-rarity="OSR"] { background-color: #ffe5f0; }   /* Original Super Rare */
+    tr[data-rarity="OUR"] { background-color: #ffece0; }   /* Original Ultra Rare */
+    tr[data-rarity="P"]   { background-color: #fff9e6; }   /* Promo */
+    tr[data-rarity="R"]   { background-color: #f9fff0; }   /* Rare */
+    tr[data-rarity="RR"]  { background-color: #e6f5ff; }   /* Double Rare */
+    tr[data-rarity="S"]   { background-color: #fff3ff; }   /* Special */
+    tr[data-rarity="SEC"] { background-color: #fdfdce; }   /* Secret */
+    tr[data-rarity="SR"]  { background-color: #fff6e6; }   /* Super Rare */
+    tr[data-rarity="SY"]  { background-color: #f0fffc; }   /* System? (仮色) */
+    tr[data-rarity="U"]   { background-color: #f3f3f3; }   /* Uncommon */
+    tr[data-rarity="UR"]  { background-color: #ffe8f8; }   /* Ultra Rare */
     .dark {
       background-color: #222;
       color: #eee;
